--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h2>iframe태그를 이용한 웹 페이지 삽입 1</h2>
-	<iframe src="https://store.steampowered.com/?l=koreana" height="200" width="300"></iframe>
+	<iframe src="https://store.steampowered.com" height="200" width="300"></iframe>
 </body>
 
 </html>
